# k8s_iam_isolation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
k8s_iam_isolation/: __init__.py  aws.py  cli.py  config.py  dangerous_rbac_combinations.yaml  k8s.py  main.py  predefined_rbac_rules.yaml
k8s_iam_isolation/custom_logging/: config.json  logger.py
k8s_iam_isolation/utils/: prompt.py
src/: namespace_cli.py
